--- a/Admin/Includes/mobile.css
+++ b/Admin/Includes/mobile.css
@@ -9,17 +9,17 @@ and open the template in the editor.
 */
 
 
- * {
-	margin: 0;
-	padding: 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+* {
+       margin: 0;
+       padding: 0;
+       -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+       box-sizing: border-box;
 }
 
 .clearfix:after {
 	content: '';
-	display: block;
+	display: flex;
 	clear: both;
 	height: 0;
 	width: 0;
@@ -53,7 +53,7 @@ background-color: orangered
    
 }
 
-
+/*==========  Menu header ================================*/
 
 .menu-linha{
     width:1024px;
@@ -62,15 +62,29 @@ background-color: orangered
     flex-direction: row;   
 }
 
-
-
-.menu{
-    width:70px;
+.m-box-a{    
     height: 40px;
     margin-top: 10px;
-    display: flex;   
-    background-color: #263238;  
+    flex-grow: 3;
+     
 }
+
+.m-box-b{    
+    height: 40px;
+    margin-top: 10px;
+    flex-grow: 6;
+    display: flex;
+     
+}
+
+.m-box-c{    
+    height: 40px;
+    margin-top: 10px;
+    flex-grow: 0.6;
+    
+    
+}
+
 
 
 
@@ -96,10 +110,13 @@ background-color: orangered
 }
 
 
+
+/*==========  Windows Popup ================================*/
+
 .boxbcg{
       background-color: rgba(0,0,0,0.5);
       position:fixed; 
-      display:block;
+      display:none;
       top:0;
       left:0;
       width:100%;
@@ -112,15 +129,32 @@ background-color: orangered
 	height:auto;
 	display: flex;
 	margin: auto;	
-        flex-direction: column;
+        flex-direction: row-reverse;
+       
 }
 
   .boxform{
       background-color: #fff;
       padding:25px;
-      width:400px;
-      height:200px;
+      width:250px;
+      height:300px;
       display: block;
-      float: left;
-      margin: 15px 0px 0px 0px;
+      float: right;
+      margin: 12px 0px 0px 0px;
+      flex-direction: column;
+  }
+  
+  .btnabrir{
+      width: 60px;
+      height: 40px;
+      margin-left: 50%;
+  }
+  
+  /*==========  fim ================================*/
+  
+  .m-box{
+      width: 100%;
+      height: 30px;
+      background-color: #CCC;
+      margin-top: 5px;
   }
