--- a/Inc/desktop.css
+++ b/Inc/desktop.css
@@ -121,14 +121,15 @@ background-color: orangered
 }
 
   .boxform{
-      background-color: #fff;
+      background-color: #DCEDC8;
       padding:60px;
-      width:400px;
+      width:360px;
       height:400px;
       display: block;
       margin: auto;	
       margin-top: 5px;
       flex-direction: column;
+      border-radius: 5px;
   }
   
   .btnabrir{
@@ -139,17 +140,72 @@ background-color: orangered
   
   /*==========  fim ================================*/
   
-  .m-box{
-      width: 100%;
-      height: 30px;
-      background-color: #CCC;
-      margin-top: 5px;
-  }
+
       
-   .btnx{
-      width: 100px;
-      height: 60px;
-      background-color: red;
-      border: none;
-      margin: -0px 0px 0px 0px;
+  .box-btnx{
+      width: 100%;
+      height: 60px;     
+      margin-top: -40px;
   }
+  
+
+  
+  
+    .m-box{
+      width: 100%;
+      height: 50px;      
+     
+      margin-top: 15px;
+      display: flex;
+      flex-direction: row;
+  }
+  
+  .formimg{
+      width: 40px;
+      height: 40px;
+      background-color: #C5E1A5;
+      margin-left: 5px;
+  }
+  
+.boxform input[type=text] {
+   width: 200px;
+    padding: 20px;
+    height: 40px;
+    
+   border: none;
+   margin-left: 5px;
+    outline: #398439;
+  
+    
+    background-color: white;
+    font-size: 18px;
+    
+   
+}
+
+/*---- botoes -------------------------*/
+  
+   .btnx{
+      width: 60px;
+      height: 60px;     
+      border: none;
+      margin-top: -15px;
+      margin-left: 235px;
+      background-color: #DCEDC8;
+  }
+  
+   .btnx:hover, .btnlogar:hover, .btncad:hover {     
+      background-color: yellowgreen;     
+  }
+  
+  
+  
+  .btnlogar, .btncad {
+   width: 200px;   
+    height: 40px;    
+   border: none;
+   margin-left: 5px;    
+   background-color: #C5E1A5;
+    font-size: 18px;    
+   
+}
