--- a/Inc/desktop.css
+++ b/Inc/desktop.css
@@ -98,7 +98,22 @@ background-color: orangered
 
 
 
+
+
+
+
 /*==========  Windows Popup ================================*/
+
+
+.btnabrir{
+      width: 60px;
+      height: 40px;
+      margin-left: 50%;
+  }
+  
+
+
+
 
 .boxbcg{
       background-color: rgba(0,0,0,0.5);
@@ -110,63 +125,59 @@ background-color: orangered
       height:100%;
   }
   
- 
-.boxform-center{
-	width:1024px;	
-	height:auto;
-	display: flex;
-	margin: auto;	
-        flex-direction: row-reverse;
-       
-}
 
-  .boxform{
-     
-      padding:0px;
-      width:360px;
-      height:400px;
+
+  .boxform{ 
+      width:320px;
+      height:auto;
       display: block;
       margin: auto;	
       margin-top: 5px;
-      flex-direction: column;
-      border-radius: 0px;
+      flex-direction: column;      
   }
   
-  .btnabrir{
-      width: 60px;
-      height: 40px;
-      margin-left: 50%;
-  }
   
   /*==========  fim ================================*/
   
 
-      
-  .box-btnx{
-      width: 100%;
-      height: 60px;     
-      margin-top: 0px;
-  }
-  
+ /*==== FORMULARIO DO POPUP USUARIO ===============*/
 
-  
-  
-    .m-box{
-      width: 100%;
-      height: 50px;      
-     
-      margin-top: 15px;
-      display: flex;
+
+.formheader{
+      background-color: #558B2F;
+     color: #C5E1A5;
+      width:300px;
+      height:100px;
+      display: block; 
+     padding: 40px 60px 30px 100px;
       flex-direction: row;
-  }
-  
-  .formimg{
-      width: 40px;
-      height: 40px;
-      background-color: #C5E1A5;
-      margin-left: 5px;
-  }
-  
+      border-radius: 10px 10px 0px 0px;
+}
+
+
+
+.formbody{
+      width:300px;
+      height:auto;
+      background-color: #fff;
+      padding: 30px 50px 30px 50px;     
+      display: block;     
+      flex-direction: column;
+     
+}
+
+
+.formfooter{
+      background-color: #558B2F;     
+      width:300px;
+      height:120px;
+      display: block; 
+     padding: 30px 0px 0px 0px;
+      flex-direction: row;
+      border-radius: 0px 0px 10px 10px;
+}
+
+   
 .formbody input[type=text] {
    width: 100%;
     padding: 0px;
@@ -183,76 +194,6 @@ background-color: orangered
    
 }
 
-
-.fantasma{display: none;}
-
-
-
-
-
-
-.formheader{
-      background-color: #558B2F;
-     color: #C5E1A5;
-      width:360px;
-      height:100px;
-      display: block; 
-     padding: 40px 60px 30px 125px;
-      flex-direction: row;
-      border-radius: 10px 10px 0px 0px;
-}
-
-
-.formbody{
-      background-color: #fff;
-      padding: 30px 60px 30px 60px;
-      width:360px;
-      height:200px;
-      display: block; 
-     
-      flex-direction: column;
-      border-radius: 0px 0px 0px 0px;
-}
-
-
-.formfooter{
-      background-color: #558B2F;
-     
-      width:360px;
-      height:120px;
-      display: block; 
-     padding: 30px 30px 30px 20px;
-      flex-direction: row;
-      border-radius: 0px 0px 10px 10px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*---- botoes -------------------------*/
   
    .btnx{
@@ -262,14 +203,20 @@ background-color: orangered
       display: block;
       margin-top: -50px;
       border-radius: 50px 50px 50px 50px;
-      margin-left: 160px;
+      margin-left: 125px;
       background-color: #558B2F;
        font-size: 18px;  
        color: #fff;
   }
   
-   .btnx:hover, .btnlogar:hover, .btncad:hover {     
-      background-color: #fff;     
+   .btnx:hover {     
+      background-color: #FF9800; 
+      color: #BF360C;
+  }
+  
+   .btnlogar:hover, .btncad:hover {     
+      background-color: #FF9800;  
+       color: #BF360C;
   }
   
   
@@ -278,8 +225,67 @@ background-color: orangered
    width: 100px;   
     height: 40px;    
    border: none;
-   margin-left: 40px;    
+   margin-left: 30px;    
    background-color: #C5E1A5;
     font-size: 18px;    
    color: #558B2F;
 }
+
+
+/*===== OPERAÇÕES DO FORMULARIO USUARIO ====*/
+
+
+.oper1,.oper2,.oper3, .oper4, .oper5{
+          
+      width:100%;
+      height:auto;
+      display: flex; 
+     margin-top: 5px;
+      flex-direction: column;
+      padding: 5px;
+}
+
+ .btnoper {
+    width: 100%;   
+    height: 40px;    
+    border: none;
+    margin-top: 10px;    
+    background-color: #558B2F;
+    font-size: 16px;    
+    color: #C5E1A5;
+}
+
+  .btnoper:hover {     
+      background-color: #FF9800; 
+      height: 45px; 
+      color:#BF360C;
+  }
+
+
+
+
+.oper1{
+    display: flex;
+}
+
+.oper2{
+    display: none;
+}
+
+.oper3{
+    display: none;
+}
+
+.oper4{
+    display: flex;
+}
+.oper5{
+    display: none;
+}
+
+.formfooter{
+    display: flex;
+}
+
+
+/*===== OPERAÇÕES FIM ====*/
