--- a/03-Unicenter/01/03gar.css
+++ b/03-Unicenter/01/03gar.css
@@ -107,21 +107,22 @@ background-color: orangered
 
 .b-center{
 	width:1024px;	
-	height:400px;
+	height:auto;
 	display: flex;
 	margin: auto;
 	border: 1px solid #ccc;	
         flex-direction: column;
+        padding: 30px;
 }
 
 
 .container-center{
     width:100%;
-    height: 650px;	
+    height: auto;	
     display: block;
     margin: auto;
-    margin-top: 2%;
-    
+    margin-top: 15px;
+     background-color: #F5F5F5;
    
 }
 
@@ -142,3 +143,18 @@ background-color: orangered
     background-color: #9E9E9E;	
    
 }
+
+/*===== form ==================*/
+
+.container-form{
+    width:500px;
+    height: 400px;	
+    display: block;
+    margin: auto;
+    margin-top: 2%;
+     background-color: #F5F5F5;
+   
+}
+
+
+
