--- a/Inc/popup.css
+++ b/Inc/popup.css
@@ -28,6 +28,24 @@ and open the template in the editor.
         
 }
 
+.popup-container-x{
+	width: 360px;	
+	height:60px;       
+	display: block;	
+        margin-top: 5px;
+        background-color: #424242;
+}
+
+.container-forms{
+	width: 360px;	
+	height:auto;       
+	display: block;
+	margin-top: 15px;
+	background-color: #E0E0E0;	
+       float: left;
+        padding: 50px;
+}
+
 .popup-form{
 	width: 360px;	
 	height:auto;       
@@ -56,12 +74,15 @@ and open the template in the editor.
 }
 
 #btnx{
-     width: 60px;	
-     height:60px;
+     width: 50px;	
+     height:50px;
       font-family: sans-serif;
     font-size: 18px;
-    background-color: none;
+    background-color: #424242;
     border: none;
+    margin-left: 305px;
+    margin-top: 5px;
+    color: #fff;
 }
 
 .pfl-user{
