--- a/Inc/desktop.css
+++ b/Inc/desktop.css
@@ -27,29 +27,11 @@ and open the template in the editor.
 
 
 
-.lmi-linha{
-width: 100%;
-height: 2px;
-background-color: orangered
-
-}
-
-/*=========  Header ==============================*/
-
-.h-full{	
-    width:100%;	
-    height: auto;
-    background-color: #B0BEC5;	 
- 
-  
-}
-
-.h-center{
-    width:1024px;
-    height: 650px;	
-    display: flex;
-    margin: auto;
-    flex-direction: column;	
+.box-rotas{
+    width: 300px;
+    height:px;	
+    display: block;
+    margin: auto;  
    
 }
 
@@ -58,25 +40,21 @@ background-color: orangered
 .menu-linha{
     width:1024px;
     height: 50px;	
-    display: flex;   
-    flex-direction: row;   
+    display: flex;
+     flex-direction: row;
+    align-items: center;
+    background-color: orangered;
 }
 
 .menu-participar{    
     width:160px;
     height: 40px;	
-    display: flex;
-    margin: auto;
-   display: flex;
+    display: block;
+     display: flex;
+     align-items: center;
    background-color: red;
+    flex-direction: row;
 }
-
-
-
-
-
-
-
 
 
 /*==========  Body ================================*/
@@ -113,179 +91,3 @@ background-color: orangered
   
 
 
-
-
-.boxbcg{
-      background-color: rgba(0,0,0,0.5);
-      position:fixed; 
-      display:block;
-      top:0;
-      left:0;
-      width:100%;
-      height:100%;
-  }
-  
-
-
-  .boxform{ 
-      width:320px;
-      height:auto;
-      display: block;
-      margin: auto;	
-      margin-top: 5px;
-      flex-direction: column;      
-  }
-  
-  
-  /*==========  fim ================================*/
-  
-
- /*==== FORMULARIO DO POPUP USUARIO ===============*/
-
-
-.formheader{
-      background-color: #558B2F;
-     color: #C5E1A5;
-      width:300px;
-      height:100px;
-      display: block; 
-     padding: 40px 60px 30px 100px;
-      flex-direction: row;
-      border-radius: 10px 10px 0px 0px;
-}
-
-
-
-.formbody{
-      width:300px;
-      height:auto;
-      background-color: #fff;
-      padding: 30px 50px 30px 50px;     
-      display: block;     
-      flex-direction: column;
-     
-}
-
-
-.formfooter{
-      background-color: #558B2F;     
-      width:300px;
-      height:120px;
-      display: block; 
-     padding: 30px 0px 0px 0px;
-      flex-direction: row;
-      border-radius: 0px 0px 10px 10px;
-}
-
-   
-.formbody input[type=text] {
-   width: 100%;
-    padding: 0px;
-    height: 40px;
-    text-align: center;
-   border: 1px solid #ccc;
-   margin-left: px;
-    outline: #398439;
-  
-    margin-top: 15px;
-    background-color: white;
-    font-size: 18px;
-    
-   
-}
-
-/*---- botoes -------------------------*/
-  
-   .btnx{
-      width: 60px;
-      height: 60px;     
-      border: none;
-      display: block;
-      margin-top: -50px;
-      border-radius: 50px 50px 50px 50px;
-      margin-left: 125px;
-      background-color: #558B2F;
-       font-size: 18px;  
-       color: #fff;
-  }
-  
-   .btnx:hover {     
-      background-color: #FF9800; 
-      color: #BF360C;
-  }
-  
-   .btnlogar:hover, .btncad:hover {     
-      background-color: #FF9800;  
-       color: #BF360C;
-  }
-  
-  
-  
-  .btnlogar, .btncad {
-   width: 100px;   
-    height: 40px;    
-   border: none;
-   margin-left: 30px;    
-   background-color: #C5E1A5;
-    font-size: 18px;    
-   color: #558B2F;
-}
-
-
-/*===== OPERAÇÕES DO FORMULARIO USUARIO ====*/
-
-
-.oper1,.oper2,.oper3, .oper4, .oper5{
-          
-      width:100%;
-      height:auto;
-      display: flex; 
-     margin-top: 5px;
-      flex-direction: column;
-      padding: 5px;
-}
-
- .btnoper {
-    width: 100%;   
-    height: 40px;    
-    border: none;
-    margin-top: 10px;    
-    background-color: #558B2F;
-    font-size: 16px;    
-    color: #C5E1A5;
-}
-
-  .btnoper:hover {     
-      background-color: #FF9800; 
-      height: 45px; 
-      color:#BF360C;
-  }
-
-
-
-
-.oper1{
-    display: flex;
-}
-
-.oper2{
-    display: none;
-}
-
-.oper3{
-    display: none;
-}
-
-.oper4{
-    display: none;
-}
-.oper5{
-    display: flex;
-}
-
-.formfooter{
-    display: flex;
-}
-
-
-/*===== OPERAÇÕES FIM ====*/
