--- a/Home/Css/popContainer.css
+++ b/Home/Css/popContainer.css
@@ -16,16 +16,19 @@ and open the template in the editor.
   position: fixed;
   right: 0;  
   top: 0;
-  z-index: 600;
-  display: none;
+  z-index: 600;  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   
 }
 /*---------- POPUP BASE  -----------------------------*/
 .popup-container{
 	width: 480px;	
-	height: auto;       
-	display: block;
-	margin: auto;
+	height: 1000px;       
+	display: flex;
+	flex-direction: column;
+        align-items: center;
         padding: 5px;
        
 }
@@ -60,8 +63,8 @@ and open the template in the editor.
 
 .linha-usuario{
 	width: 100%;	
-	height:380px;       
-	display: flex;
+	height:450px;       
+	display: none;
 	margin-top: 10px;
 	background-color: #fff;	
         flex-direction: column;
@@ -72,6 +75,30 @@ and open the template in the editor.
 .linha-termo{
 	width: 100%;	
 	height:auto;       
+	display: none;
+	margin-top: 10px;
+	background-color: #fff;	
+        flex-direction: column;       
+        padding: 30px 50px 60px 50px;
+}
+
+
+.linha-pessoa{
+	width: 100%;	
+	height:auto;       
+	display: none;
+	margin-top: 10px;
+	background-color: #fff;	
+        flex-direction: column;
+        align-items: center;
+        padding: 30px 0px 100px 0px;
+}
+
+
+
+.linha-aviso{
+	width: 100%;	
+	height:auto;       
 	display: flex;
 	margin-top: 10px;
 	background-color: #fff;	
@@ -79,9 +106,6 @@ and open the template in the editor.
         align-items: center;
         padding: 30px 50px 60px 50px;
 }
-
-
-
 /*===== FORMULARIO LOGIN CADASTRO ===========*/
 
 /*===== FORMULARIO LOGIN CADASTRO FIM ===========*/
