--- a/Home/Css/home.css
+++ b/Home/Css/home.css
@@ -111,8 +111,7 @@
     width: 100%;
     height: 550px;
     display: flex;
-    flex-direction: column;
-    
+    flex-direction: column;    
     border: 1px solid blueviolet;
     
 }
@@ -162,33 +161,28 @@
 }
 
 
-.b-linha {
+
+
+/*==========================================*/
+
+
+.linha-3 {
     width: 100%;
     height: auto;
     padding: 5px;
     margin-top: 15px;
     display: flex;
     flex-direction: row;    
-    border: 1px solid #ccc;
+    background-color: #ccc;
     
 }
 
-.box1 {
+.box-2 {
     width: 100%;
     height: auto;
-    padding: 20px;   
+    padding: 60px;   
     display: flex;
     flex-direction: column;    
-    border: 1px solid #ccc;
-    
-}
-
-.box2 {
-    width: 100%;
-    height: auto;
-    padding: 20px;   
-    display: flex;
-    flex-direction: column;    
-    border: 1px solid #ccc;
+   background-color: #fff;
     
 }
